- Fixed all remaining alignment flaws.

--- a/RB test webpage/RB About.css
+++ b/RB test webpage/RB About.css
@@ -1,13 +1,6 @@
-* {
-    font-family: Verdana;
-    color: white;
-}
-
-
 body {
     background-color: black;
     text-align: center;
-    color: white;
     margin: 0 auto;
 }
 
@@ -24,44 +17,6 @@ body::before {
    z-index: -1;  /*keeps it behind everything */
 }
 
-.banner {
-    color: white;
-    padding: 5px;   
-}
-
-#bar_name {
-     user-select: none;
-}
-
-#bar_name ul{
-    background-color: rgba(0, 0, 0, 0);
-    position: absolute;
-    top: 100px;
-    left: 15px;
-    list-style: none;
-    padding-top: 21px;
-    margin-top: -64px;
-    margin-bottom: -24px;
-    line-height: 32px;
-    font-size: 11px;
-    z-index: 2;
-}
-
-section h1 {
-    letter-spacing: 12px;
-    font-size: 42px;
-}
-
-section h4 {
-    margin: -20px 0 auto;
-    letter-spacing: 4px;
-}
-
-section a {
-    text-decoration: none;
-}
-
-
 main {
     width:900px;
     height: 1000px;
@@ -72,7 +27,7 @@ main {
     background-repeat: no-repeat;
     background-size: 900px;
     border: 1px solid #b37373;
-    margin: 18px auto;
+    margin: 48px auto;
 }
 
 main h2 {
@@ -106,37 +61,6 @@ p a {
     text-decoration: none;
 }
 
-#selection {
-    position: relative;
-    margin: 0 0 0 -40px;
-    padding-top: 48px;
-}
-
-#selection a{
-    width: 150px;
-    display: inline-block;
-    padding-top: 20px;
-    list-style: none;    
-}
-
-#selection .tab :hover {
-    color: #7393B3;
-    cursor: pointer;
-}
-
-a:visited{
-    color: white;
-}
-
-#Active{
-    width: 150px;
-    display: inline-block;
-    padding-top: 20px;
-    list-style: none;  
-    color: #b37373;
-    cursor: pointer;
-}
-
 table {
     margin: 48px auto;
     border: 2px solid #b37373;
@@ -148,8 +72,3 @@ th {
     text-decoration: underline 2px #b37373;
 }
 
-/* Colours
-  #b37373
-  #7393B3
-  #920000
-*/
