--- a/RB test webpage/RB Banner.css
+++ b/RB test webpage/RB Banner.css
@@ -4,10 +4,10 @@
     font-family: Verdana;
 }
 
-.banner {
+/*.banner {
     padding: 5px;
     margin: 0 auto;   
-}
+}*/
 
 #bar_name {
      user-select: none;
