--- a/RB test webpage/RB Events.css
+++ b/RB test webpage/RB Events.css
@@ -1,10 +1,3 @@
-* {
-    display: border-box;
-    color: white;
-    font-family: Verdana;
-}
-
-
 body {
     background-color: black;
     text-align: center;
@@ -24,74 +17,6 @@ body::before {
    z-index: -1;  /*keeps it behind everything */
 }
 
-.banner {
-    padding: 5px;
-    display: block;
-    margin: 0 auto;   
-}
-
-#bar_name {
-     user-select: none;
-}
-
-#bar_name ul {
-    background-color: rgba(0, 0, 0, 0);;
-    position: absolute;
-    top: 100px;
-    left: 15px;
-    list-style: none;
-    padding-top: 21px;
-    margin-top: -64px;
-    margin-bottom: -24px;
-    line-height: 32px;
-    font-size: 11px;
-    z-index: 2;
-}
-
-section h1 {
-    letter-spacing: 12px;
-    font-size: 42px;
-}
-
-section h4 {
-    margin: -20px 0 auto;
-    letter-spacing: 4px;
-}
-
-section a {
-    text-decoration: none;
-}
-
-#selection {
-    position: relative;
-    margin: 0 0 0 -40px;
-    padding-top: 48px;
-}
-
-#selection a{
-    width: 150px;
-    display: inline-block;
-    padding-top: 20px;
-    list-style: none;    
-}
-
-#selection .tab :hover {
-    color: #7393B3;
-    cursor: pointer;
-}
-
-a:visited{
-    color: white;
-}
-
-#Active{
-    width: 150px;
-    display: inline-block;
-    padding-top: 20px;
-    list-style: none;  
-    color: #b37373;
-    cursor: pointer;
-}
 
 .Events {
     display: flex;
@@ -101,7 +26,7 @@ a:visited{
     width: 900px;
     height: 1000px;
     border: 1px solid #b37373;
-    margin: 18px auto;
+    margin: 48px auto;
 }
 
 .Events article {
@@ -112,20 +37,20 @@ a:visited{
 
 #Events img{ 
     grid-row: auto;
-    height: 450;
-    width: 450;
+    height: 450px;
+    width: 450px;
 }
 
 #Event1 img{
-    height:500px;
-    width:450px;
+    height: 500px;
+    width: 450px;
     
 }
 
 #Event2 img{
-    height:500px;
-    width:450px;
-    margin: -10px;
+    height: 500px;
+    width: 450px;
+    margin: -12px;
 }
 
 article h3 {
