--- a/RB test webpage/RB Home.css
+++ b/RB test webpage/RB Home.css
@@ -1,9 +1,3 @@
-* {
-    box-sizing: auto;
-    color: white;
-    font-family: Verdana;
-}
-
 body {
     text-align: center;
     background-color: black;
@@ -22,29 +16,6 @@ body::before {
    z-index: -1;  /*keeps it behind everything */
 }
 
-.banner {
-    padding: 5px;
-    display: block;
-    margin: 0 auto;
-    margin-top: -8px;
-}
-
-#bar_name {
-     user-select: none;
-}
-
-#bar_name ul {
-    background-color: rgba(0, 0, 0, 0);;
-    position: absolute;
-    top: 121px;
-    left: 10px;
-    list-style: none;
-    margin: -64px 0 -24px 5px;
-    line-height: 32px;
-    font-size: 11px;
-    z-index: 2;
-}
-
 h1 {
     letter-spacing: 12px;
     font-size: 42px;
@@ -53,24 +24,6 @@ h1 {
 h4 {
     margin-top: -20px;
     letter-spacing: 4px;
-}
-
-#selection {
-    position: relative;
-    margin: 0 auto;
-    padding-top: 48px;
-}
-
-#selection li{
-    width: 150px;
-    display: inline-block;
-    list-style: none;
-    
-}
-
-#selection li:hover {
-    color: #7393B3;
-    cursor: pointer;
 }
 
 .pictures {
@@ -85,7 +38,7 @@ h4 {
 }
 
 .image img{
-    height: 920px;
+    height: 1000px;
     width: 640px;
     align-items: center;
     border: 1px solid #b37373;
@@ -97,7 +50,7 @@ h4 {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.7);
     overflow: hidden;
     height: 60px;
     width: 640px;
@@ -113,13 +66,5 @@ h4 {
 
 .image:hover .overlay {
     opacity: 1;
-}
-
-a:visited{
-    color: white;
-}
-
-a:active {
-    color: #b37373;
 }
 
