--- a/RB test webpage/RB Menu.css
+++ b/RB test webpage/RB Menu.css
@@ -1,8 +1,3 @@
-* {
-    color: white;
-    font-family: Verdana;
-}
-
 body {
     background-color: black;
     text-align: center;
@@ -19,73 +14,28 @@ body::before {
     background: url("Assets/Rattlebag Logo White.png") repeat top/300px;
     opacity: 0.05; /* change this to control how faint the PNG is */
     pointer-events: none; /* don’t block clicks */
-   z-index: -1;  /*keeps it behind everything */
+    z-index: -1;  /*keeps it behind everything */
 }
 
-.banner {
-    padding: 5px;    
+.menu {
+    display: grid;
+    grid-template-columns: 300px 300px 300px; /* 3 equal sections */
+    width: 900px;
+    height: 1000px;
+    margin: 48px auto;
+    padding-left: 16px;
 }
 
-h1 {
-    letter-spacing: 12px;
-    font-size: 42px;
-}
-
-h4 {
-    margin-top: -20px;
-    letter-spacing: 4px;
-}
-
-a:visited{
-    color: white;
-}
-
-.menu img{
-    height: 900px;
+.menu #img1 {
+    grid-column: 1; /* left */
     width: 300px;
-    padding: 18px 146px 64px;
+    height: 900px;
+    object-fit: cover;
 }
 
-#bar_name {
-     user-select: none;
-}
-
-#bar_name ul {
-    background-color: rgba(0, 0, 0, 0);
-    position: absolute;
-    top: 121px;
-    left: 15px;
-    list-style: none;
-    margin-top: -64px;
-    margin-bottom: -24px;
-    line-height: 32px;
-    font-size: 11px;
-    z-index: 2;
-}
-
-#selection {
-    position: relative;
-    margin: -20px 0 0 -40px;
-    padding-top: 48px;
-}
-
-#selection a{
-    width: 150px;
-    display: inline-block;
-    list-style: none;
-    text-decoration: none;  
-}
-
-#selection .tab :hover {
-    color: #7393B3;
-    cursor: pointer;
-}
-
-#Active{
-    width: 150px;
-    display: inline-block;
-    padding-top: 20px;
-    list-style: none;  
-    color: #b37373;
-    cursor: pointer;
+.menu #img2 {
+    grid-column: 3; /* right */
+    width: 300px;
+    height: 900px;
+    object-fit: cover;
 }
